syntax = "proto3";

package orbitpsql_pb;

service PostGres {
    rpc DBCall(DBCallRequest) returns (DBCallResponse){}
}

message DBCallRequest{
    string payload = 1;
}

message DBCallResponse{
    bytes payload = 1;
}